v2/internal/nsz.repo.hu/libc-test/src/api/limits.o.err
src/api/limits.c: In function ‘f’:
src/api/limits.c:63:3: error: ‘_POSIX_UIO_MAXIOV’ undeclared (first use in this function)
   63 | C(_XOPEN_IOV_MAX)
      |   ^~~~~~~~~~~~~~
src/api/limits.c:3:21: note: in definition of macro ‘C’
    3 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/limits.c:63:3: note: each undeclared identifier is reported only once for each function it appears in
   63 | C(_XOPEN_IOV_MAX)
      |   ^~~~~~~~~~~~~~
src/api/limits.c:3:21: note: in definition of macro ‘C’
    3 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/limits.c:64:3: error: ‘_XOPEN_NAME_MAX’ undeclared (first use in this function); did you mean ‘LOGIN_NAME_MAX’?
   64 | C(_XOPEN_NAME_MAX)
      |   ^~~~~~~~~~~~~~~
src/api/limits.c:3:21: note: in definition of macro ‘C’
    3 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/limits.c:65:3: error: ‘_XOPEN_PATH_MAX’ undeclared (first use in this function)
   65 | C(_XOPEN_PATH_MAX)
      |   ^~~~~~~~~~~~~~~
src/api/limits.c:3:21: note: in definition of macro ‘C’
    3 | #define C(n) switch(n){case n:;}
      |                     ^
exit status 1
